# video-archive-search

./: .gitignore  README.md  database.py  main.py  pyproject.toml  run.bat  transcriber.py
.qdrant_db/: meta.json
.qdrant_db/collection/video_archive/: storage.sqlite
