[project]
name = "video-archive-search"
version = "0.0.1"
description = "ASearch the video archive with speech transcription and vector search"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "faster-whisper>=1.2.1",
    "qdrant-client>=1.12.0",
    "sentence-transformers>=3.0.0",
    "static-ffmpeg>=3.0",
    "streamlit>=1.58.0",
]
